Relationship in salesforce/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_in_which_Subjects__c</fullName>
        <label>Back in which Subjects</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Economics</fullName>
                </value>
                <value>
                    <fullName>Geography</fullName>
                </value>
                <value>
                    <fullName>Political Science</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Psychology</fullName>
                </value>
                <value>
                    <fullName>Sociology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Phone_Number__c</fullName>
        <label>Bank Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jaipur</fullName>
                </value>
                <value>
                    <fullName>Jodhpur</fullName>
                </value>
                <value>
                    <fullName>Udaipur</fullName>
                </value>
                <value>
                    <fullName>Jaisalmer</fullName>
                </value>
                <value>
                    <fullName>Ahmedabad</fullName>
                </value>
                <value>
                    <fullName>Surat</fullName>
                </value>
                <value>
                    <fullName>Rajkot</fullName>
                </value>
                <value>
                    <fullName>Vadodara</fullName>
                </value>
                <value>
                    <fullName>Amritsar</fullName>
                </value>
                <value>
                    <fullName>Patiala</fullName>
                </value>
                <value>
                    <fullName>Ludhiana</fullName>
                </value>
                <value>
                    <fullName>Jalandhar</fullName>
                </value>
                <value>
                    <fullName>Indore</fullName>
                </value>
                <value>
                    <fullName>Gwalior</fullName>
                </value>
                <value>
                    <fullName>Bhopal</fullName>
                </value>
                <value>
                    <fullName>Jabalpur</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1st Year</fullName>
                </value>
                <value>
                    <fullName>2nd Year</fullName>
                </value>
                <value>
                    <fullName>3rd Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <label>Current Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Donation_Amount__c</fullName>
        <label>Donation Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Exam_Fees_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exam Fees Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exam_Time__c</fullName>
        <label>Exam Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Failed_in_Subjects__c</fullName>
        <label>Failed in Subjects</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Economics</fullName>
                </value>
                <value>
                    <fullName>Geography</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Political Science</fullName>
                </value>
                <value>
                    <fullName>Psychology</fullName>
                </value>
                <value>
                    <fullName>Sociology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <label>Father Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Father_s_Mobile_Number__c</fullName>
        <label>Father&apos;s Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fees_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fees Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IFSC_Code__c</fullName>
        <label>IFSC Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Donation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Donation ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Linkdin_URL__c</fullName>
        <label>Linkdin URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Mob_Number__c</fullName>
        <label>Mob Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Overall_Grade__c</fullName>
        <label>Overall Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A+</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B+</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>C+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pending_Exam_Fees__c</fullName>
        <label>Pending Exam Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Fees_Amount__c</fullName>
        <label>Pending Fees Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Overall_Amount__c</fullName>
        <label>Pending Overall Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <label>Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Roll_no__c</fullName>
        <inlineHelpText>Enter your Roll no</inlineHelpText>
        <label>Roll no</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rajasthan</fullName>
                </value>
                <value>
                    <fullName>Punjab</fullName>
                </value>
                <value>
                    <fullName>Madhya Pradesh</fullName>
                </value>
                <value>
                    <fullName>Gujrat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stream__c</fullName>
        <label>Stream</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Economics</fullName>
                </value>
                <value>
                    <fullName>Geography</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Political Science</fullName>
                </value>
                <value>
                    <fullName>Psychology</fullName>
                </value>
                <value>
                    <fullName>Sociology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_in_which_back__c</fullName>
        <label>Subject in which back</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Economics</fullName>
                </value>
                <value>
                    <fullName>Geography</fullName>
                </value>
                <value>
                    <fullName>Political science</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Psychology</fullName>
                </value>
                <value>
                    <fullName>Sociology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subjects_in_which_back__c</fullName>
        <label>Subjects in which back</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Economics</fullName>
                </value>
                <value>
                    <fullName>Geography</fullName>
                </value>
                <value>
                    <fullName>Political Science</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Psychology</fullName>
                </value>
                <value>
                    <fullName>Sociology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1st_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1st Sem Back?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1st_Sem_Percentage__c</fullName>
        <label>1st Sem Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X2nd_Sem_Percentage__c</fullName>
        <label>2nd Sem Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X2nd_Year_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2nd Year Sem Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3rd_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3rd Sem Back ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3rd_Sem_Percentage__c</fullName>
        <label>3rd Sem Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>Registrar_Layout</fullName>
        <active>true</active>
        <label>Registrar Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Teacher_Layout</fullName>
        <active>true</active>
        <label>Teacher Layout</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>